initialize datas for integration unit test